Fix to remove double border on input in form with look grid

--- a/src/components/form/style.css
+++ b/src/components/form/style.css
@@ -26,9 +26,7 @@ smoothly-form > form > fieldset > * {
 	min-width: 10em;
 	flex-basis: 40%;
 }
-smoothly-form[looks="grid"] > form > fieldset {
-	border: rgba(var(--text-color), .5) solid .5px;
-}
+
 smoothly-form[looks="line"] > form > fieldset,
 smoothly-form[looks="border"] > form > fieldset,
 smoothly-form[looks="transparent"] > form > fieldset {
